tests/NormalTests/paczka1/fuzzy1/11717202.err
Error in line 5: 156 156 97,3
Error in line 1: w9x S720 40,4
Error in line 4: S156 S720 34,4
Error in line 13: PP1I A578 82,3
Error in line 17: PP1I S156 7,4
Error in line 12: jHPL8Zjh4 S720 76,1
Error in line 18: 6wVE9 S858 235,3
Error in line 20: jHPL8Zjh4 S858 24,8
